# mcdlib

./: .gitmodules  CMakeLists.txt  README.md
python/: CMakeLists.txt  PythonModule.cpp
src/: MCDFile.cpp  MCDFile.h  MCDFileAcquisitionData.cpp  MCDFileAcquisitionData.h  MCDFileIOException.h  MCDFileMalformedException.h  MCDFileMetadata.cpp  MCDFileMetadata.h
src/data/: Acquisition.cpp  Acquisition.h  Channel.cpp  Channel.h  ChannelData.cpp  ChannelData.h  MetadataBase.cpp  MetadataBase.h  Panorama.cpp  Panorama.h  Region.cpp  Region.h  Slide.cpp  Slide.h
test/: CMakeLists.txt
